# Spring_2025

Lr1/ChapyginIS_24ISz/: 24ИСз_Чапыгин_И.С._ЛР_1.docx
Lr2/Chapygin_IS_24_ISz/: Chapygin_IS_24ISz.docx
Lr2/Chapygin_IS_24_ISz/knowlege_mange/: README.md  build.py  pyproject.toml  requirements.txt  run.py
Lr2/Chapygin_IS_24_ISz/knowlege_mange/documentation/: mkdocs.yml
Lr2/Chapygin_IS_24_ISz/knowlege_mange/documentation/docs/: index.md
Lr2/Chapygin_IS_24_ISz/knowlege_mange/documentation/docs/Режимы резания/: О режимах резания.md  Режимы обработки резьб.md  Резание на протяжных станках.md  Резание на сверлильных станках.md  Резание на токарных станках.md  Резание на фрезерных станках.md  Резание на шлифовальных станках.md
Lr2/Chapygin_IS_24_ISz/knowlege_mange/documentation/docs/Сборка/: Виды сборок.md
Lr2/Chapygin_IS_24_ISz/knowlege_mange/knowlege_manage/: file_utils.py  main.py  tt.py
Lr3/Chapygin_IS_24ISz/: Чапыгин_ИС_24ИСз.docx
